--- a/bin/backups/subscribe_channel.html
+++ b/bin/backups/subscribe_channel.html
@@ -8,8 +8,8 @@
       width: 500px;
     border: 1px solid #e2e5ec;
     padding: 40px;
-    border-radius: 4px;
-    margin: 25px 0;
+    border-radius: 4px; 
+    margin: 25px 0; 
    }
 </style>
 <script src="{% static 'js/core_post.js' %}"></script>
@@ -22,7 +22,7 @@
             <div class="wrap-c">
                <button type="button" class="btn btn-label-info m-r-10 subheader-toggle"><i
                   class="fas fa-bars"></i></button>
-               <h3 class="title"> {% trans 'commentOnVideo' %}</h3>
+               <h3 class="title"> {% trans 'subscribeChannel' %}</h3>
             </div>
          </div>
       </div>
@@ -31,30 +31,48 @@
       <div class="content-one-column nicescroll instagram-activity">
           <p class="mt-3">
              <i class="fa fa-info-circle mx-2 text-primary"></i>
-            {% trans 'thisFunctionalityComments' %}
+            {% trans 'channelSubscribeFunctionality' %}
          </p>
          <form class="tools_form" action="" method="POST">
             {% csrf_token %}
             <div class="row">
                <div class="col-md-12">
+                <div class="caption m-t-15">
+                     <div class="form-group">
+                       <label for="account">Group</label>
+                       <select class="select form-control" id="group_name" name="group_name">
+                         <option value="">--- Subscribe Channel with a Group ---</option>
+                         {% for group in user_groups %}
+                           <option value="{{group.id}}">{{group.name}}</option>
+                         {% endfor %}
+                       </select>
+                     </div>
+                  </div>
+                  <div class="caption m-t-15">
+                     <div class="form-group">
+                       <label for="account">Account</label>
+                       <select class="select form-control" name="youtube_email">
+                         <option value="">--- Subscribe Channel with a Account ---</option>
+                         {% for account in user_accounts %}
+                           <option value="{{account.id}}">{{account.email}}</option>
+                         {% endfor %}
+                       </select>
+                     </div>
+                  </div>
                   <div class="form-group">
-                     <label for="video_url">{% trans 'Video url' %}</label>
-                     <input id="video_url" type="text" class="form-control" name="video_url" placeholder="{% trans 'Enter Video Url' %}" required="True" required="required"/>
+                     <label for="channel_id">{% trans 'channelId' %}</label>
+                     <input id="channel_id" type="text" class="form-control" name="channel_id" placeholder="{% trans 'enterChannelId' %}" required="True" required="required"/>
                   </div>
-                   <div class="form-group">
-                     <label for="list">{% trans 'Comments' %}</label>
-                     <input type="text" class="form-control" name="your_cooment_list" placeholder="{% trans 'enter the list of comments ' %}" required="True" min="1" />
+                  <div class="form-group">
+                     <input type="checkbox" id="subscrib_channel" name="subscrib_channel" value="True">
+                  <label for="like_post"> {% trans 'subscribe' %}</label><br>
                   </div>
-                   <div class="form-group">
-                     <label for="code">{% trans 'Comment number' %}</label>
-                     <input type="number" class="form-control" name="your_comment" placeholder="{% trans 'enter number of comments ' %}" required="True" min="1" />
-                  </div>
+
                   <div class="form-group">
                   <span>{% trans 'currentTimezone' %}: {{user.timezone}}</span><a href="{% url 'account' %}" style="float: right;"><i class="far fa-edit"></i> {% trans 'edit' %}</a>
                   </div>
                   <input type="hidden" name="timezone" value="{{user.timezone}}">
                   <input type="hidden" name="admin_user_id" value="{{ user.id }}">
-                  <input type="hidden" id="insta_user_id" name="insta_user_id">
                   <button type="submit" class="btn btn-primary">{% trans 'submit' %}</button>
                </div>
             </div>
@@ -62,21 +80,6 @@
       </div>
    </div>
 </div>
-<script type="text/javascript">
-var inp1 = document.getElementById("group_name");
-  inp1.onchange = function () {
-     if (this.value != "") {
-        document.getElementById("youtube_email").disabled = true;
-     }
-  }
-var inp2 = document.getElementById("youtube_email");
-  inp2.onchange = function () {
-     if (this.value != "" || this.value.length > 0) {
-        document.getElementById("group_name").disabled = true;
-     }
-  }
-
-</script>
 {% endblock %}
 {% block script %}
 {% include 'dashboard/include/tools_script.html' %}
